Initial commit: Flask backend + Node frontend with start/stop scripts Deploye on single ec2 instance

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,13 @@
-node_modules/
+# Python
+__pycache__/
+*.pyc
 venv/
-.DS_Store
+*.log
+
+# Node
+node_modules/
+npm-debug.log
+
+# VS Code
 .vscode/
+
